--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ buildscript {
     repositories {
         maven {
             name = "forge"
-            url = "http://files.minecraftforge.net/maven"
+            url = "https://files.minecraftforge.net/maven"
         }
     }
     dependencies {
