--- a/gradle.properties
+++ b/gradle.properties
@@ -2,5 +2,5 @@ loom.platform=forge
 org.gradle.jvmargs=-Xmx2g
 baseGroup = net.hypixel
 mcVersion = 1.8.9
-modid = modapi
+modid = hypixel_mod_api
 version = 0.5.0
