--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,9 @@ repositories {
     maven {
         url "https://repo.hypixel.net/repository/Hypixel/"
     }
+    maven {
+        url "https://pkgs.dev.azure.com/djtheredstoner/DevAuth/_packaging/public/maven/v1"
+    }
     mavenLocal()
 }
 
@@ -31,6 +34,9 @@ minecraft {
     runDir = "run"
 
     mappings = "stable_22"
+
+    replace('${version}', project.version)
+    replaceIn("ForgeModAPI.java")
 }
 
 configurations {
@@ -40,6 +46,7 @@ configurations {
 
 dependencies {
     shade "net.hypixel:mod-api:1.0"
+    runtimeOnly "me.djtheredstoner:DevAuth-forge-legacy:1.2.1"
 }
 
 jar {
