--- a/build.gradle
+++ b/build.gradle
@@ -11,19 +11,21 @@ buildscript {
     }
 }
 apply plugin: 'net.minecraftforge.gradle.forge'
+allprojects {
+    version = "1.0.0.1" // First 3 numbers should correspond to the version of the API, last number is for the mod itself for any changes/fixes
+    group = "net.hypixel.modapi" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
+    archivesBaseName = "HypixelModAPI"
 
-version = "1.0.0.1" // First 3 numbers should correspond to the version of the API, last number is for the mod itself for any changes/fixes
-group = "net.hypixel.modapi" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
-archivesBaseName = "HypixelModAPI"
+    repositories {
+        maven {
+            url "https://repo.hypixel.net/repository/Hypixel/"
+        }
+        mavenLocal()
+    }
+}
+
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
-
-repositories {
-    maven {
-        url "https://repo.hypixel.net/repository/Hypixel/"
-    }
-    mavenLocal()
-}
 
 minecraft {
     version = "1.8.9-11.15.1.1722"
