--- a/build.gradle
+++ b/build.gradle
@@ -12,8 +12,9 @@ buildscript {
 }
 apply plugin: 'net.minecraftforge.gradle.forge'
 allprojects {
-    version = "1.0.0.1" // First 3 numbers should correspond to the version of the API, last number is for the mod itself for any changes/fixes
-    group = "net.hypixel.modapi" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
+    apply plugin: 'maven-publish'
+    version = "1.0.0.2" // First 3 numbers should correspond to the version of the API, last number is for the mod itself for any changes/fixes
+    group = "net.hypixel" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
     archivesBaseName = "HypixelModAPI"
 
     repositories {
@@ -21,6 +22,17 @@ allprojects {
             url "https://repo.hypixel.net/repository/Hypixel/"
         }
         mavenLocal()
+    }
+
+    publishing {
+        publications {
+            maven(MavenPublication) {
+                groupId = project.group
+                artifactId = project == rootProject ? 'mod-api-forge' : ('mod-api-forge-' + project.name)
+                version = project.version
+                    from components.java
+                }
+        }
     }
 }
 
